[project]
name = "cloudnativecapstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2026.1.2",
    "netcdf4>=1.7.4",
    "polars>=1.38.1",
    "prefect>=3.6.18",
    "pyarrow>=23.0.1",
    "pystac>=1.14.3",
    "rich>=14.3.3",
    "sh>=2.2.2",
    "shapely>=2.1.2",
    "xarray>=2026.2.0",
    "zarr>=3.1.5",
]
